# cookiecutter-cloudron

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: CloudronManifest.json  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
{{cookiecutter.project_slug}}/compose/django/: celery-hooks  entrypoint  start.asgi
{{cookiecutter.project_slug}}/supervisor/: supervisord.conf
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/: __init__.py  auth.py  errors.py  health.py  schemas.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/schemas/: auth.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/common/: apps.py  models.py  urls.py  utils.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/common/management/commands/: backup_cloudron.py  backup_db.py  backup_media.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/common/middleware/: __init__.py  log_requests.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/css/: style.css  utilities.css
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/js/: main.js
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/: 400.html  403.html  404.html  500.html  base.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/account/: authenticate.html  login.html  password_reset.html  signup.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/account/email/: password_reset_key_message.txt
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/partials/: footer.html  header.html  messages.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/: admin.py  forms.py  managers.py  models.py  signals.py  urls.py  views.py
(+5 files in other folders)
